@@ -163,8 +163,8 @@ table.budget td.value	{font-size:16px; padding-right:20px; text-align:right;}
 table.budget tr:nth-of-type(1) td	{padding-top:15px;}
 table.budget tr:nth-of-type(1) th	{position:sticky; top:30px; z-index:1; background-color:#1c252fe8; padding:10px 0;}
 table.budget tr:nth-of-type(1) th:after	{content:''; position:absolute; left:0; bottom:-1px; width:100%; border-bottom:1px solid #aaa;}
-table.part_org td:nth-of-type(1),
-table.location td:nth-of-type(1)	{font-size:16px;}
+table.part_org td.part_org_name,
+table.location td.loc_name			{font-size:16px;}
 table.part_org td,
 table.location td					{padding:5px 0;}
 
@@ -238,12 +238,13 @@ table.budget.part_org td.part_org_role		{width:120px; padding-right:20px;}
 table.budget.part_org th.part_org_type,
 table.budget.part_org td.part_org_type		{width:140px; padding-right:0px;}
 
-.wrap_humanitarian_scope table.budget.part_org th:nth-of-type(2),
-.wrap_humanitarian_scope table.budget.part_org td:nth-of-type(2)		{width:120px;}
-.wrap_humanitarian_scope table.budget.part_org th:nth-of-type(3),
-.wrap_humanitarian_scope table.budget.part_org td:nth-of-type(3),
-.wrap_humanitarian_scope table.budget.part_org th:nth-of-type(4),
-.wrap_humanitarian_scope table.budget.part_org td:nth-of-type(4)		{width:180px;}
+/*	IATI ACTIVITY HUMANITARIAN SCOPE TABLE	*/
+.wrap_humanitarian_scope table.budget.part_org th.hum_type,
+.wrap_humanitarian_scope table.budget.part_org td.hum_type		{width:120px;}
+.wrap_humanitarian_scope table.budget.part_org th.hum_vocab,
+.wrap_humanitarian_scope table.budget.part_org td.hum_vocab,
+.wrap_humanitarian_scope table.budget.part_org th.hum_code,
+.wrap_humanitarian_scope table.budget.part_org td.hum_code		{width:180px;}
 
 /*	IATI ACTIVITY LOCATION TABLE	*/
 table.budget.location th,
@@ -296,6 +297,13 @@ table.budget.result td:nth-of-type(3)		{width:500px; padding-right:0px;}
 .result_in_date	{width:30%;}
 .result_in_date div			{text-align:right;}
 .result_in_date div span	{font-size:12px; color:#ccc; width:50px; text-align:left;}
+
+/*	IATI ACTIVITY POLICY MARKER TABLE	*/
+.wrap_policy_marker table.budget th.policy_code,
+.wrap_policy_marker table.budget td.policy_code		{width:480px; padding-right:40px;}
+.wrap_policy_marker table.budget th.policy_sig,
+.wrap_policy_marker table.budget td.policy_sig		{text-transform:capitalize;}	
+
 
 /*	DEFAULTS MODALITIES	*/
 table.modals					{table-layout:fixed; border-collapse:collapse; width:100%;}
