@@ -1,4 +1,9 @@
-Development Portal (2020-02-4 shi)
+Development Portal (2020-02-05 shi)
+==============================
+Add contact-info and policy-marker new SAVi
+
+
+Development Portal (2020-02-04 shi)
 ==============================
 Add planned-disbursement new SAVi
 Update css for transaction and budget tables
@@ -6,7 +11,7 @@ Add recipient-region new SAVi
 Update debug page for new SAVi with more examples
 
 
-Development Portal (2020-02-1 shi)
+Development Portal (2020-02-01 shi)
 ==============================
 Update css for new SAVi dates
 
